# advent-of-code

aoc2024/: Cargo.toml  README.md
aoc2025/: README.md  pyproject.toml
aoc2025/src/aoc2025/: main.py  utils.py
aoc2025/src/aoc2025/day01/: main.py
aoc2025/src/aoc2025/day02/: main.py
aoc2025/src/aoc2025/day03/: main.py
aoc2025/src/aoc2025/day04/: main.py
aoc2025/src/aoc2025/day05/: main.py
aoc2025/src/aoc2025/day06/: main.py
aoc2025/src/aoc2025/day07/: main.py
aoc2025/src/aoc2025/day08/: main.py
aoc2025/src/aoc2025/day09/: main.py
aoc2025/src/aoc2025/day10/: main.py
aoc2025/src/aoc2025/day11/: main.py
aoc2025/src/aoc2025/day12/: main.py
aoc2025/tests/: test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py  test_day07.py  test_day08.py  test_day09.py  test_day10.py  test_day11.py
