[project]
name = "aoc2025"
version = "0.0.0"
description = "Alicipy 'Advent of code' 2025"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scipy>=1.16.3",
]

[project.scripts]
alicipy-aoc2025 = "aoc2025.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ['E', 'I', 'UP']

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.7",
]
